# snupy-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Pipfile  Procfile  README.md  app.py  deploy.sh  pyproject.toml  requirements.txt  template.yml
.chalice/: config.json
chalicelib/: llms.py
events/: test.json
lib/: llms.py
lib/resources/: maxim.txt
src/: app.py
src/main/: app.py
src/snupy/: app.py  messages.py
src/snupy/tests/: test_messages.py
tests/: test_messages.py
